--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.9",
+    "@tanstack/react-query": "^5.79.0",
+    "@tanstack/react-query-devtools": "^5.79.0",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -25,12 +27,13 @@
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
+    "next-themes": "^0.4.6",
     "openai": "^4.95.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
-    "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -45,6 +48,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.2",
     "typescript": "^5"
   }
 }
