--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "rss-parser": "^3.13.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
