--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@radix-ui/react-tabs": "^1.1.9",
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-query-devtools": "^5.80.6",
+    "@tremor/react": "^3.18.7",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
@@ -37,6 +39,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-remove-scroll": "^2.7.1",
+    "recharts": "^2.15.3",
     "rss-parser": "^3.13.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
