--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.6.3",
+    "jose": "^6.0.11",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
