--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-remove-scroll": "^2.7.1",
+    "react-webcam": "^7.2.0",
     "recharts": "^2.15.3",
     "rss-parser": "^3.13.0",
     "sonner": "^2.0.3",
