--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-query-devtools": "^5.80.6",
     "@tremor/react": "^3.18.7",
+    "@types/html2canvas": "^1.0.0",
+    "@types/jspdf": "^2.0.0",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
@@ -35,7 +37,9 @@
     "date-fns": "^3.6.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.6.3",
+    "html2canvas": "^1.4.1",
     "jose": "^6.0.11",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
