--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-intersection-observer": "^9.16.0",
     "react-remove-scroll": "^2.7.1",
     "react-webcam": "^7.2.0",
     "recharts": "^2.15.4",
