--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-themes": "^0.4.6",
     "openai": "^4.95.1",
     "react": "^19.0.0",
+    "react-date-range": "^2.0.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
@@ -66,6 +67,7 @@
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19",
     "critters": "^0.0.20",
     "eslint": "^9",
